snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.0-SNAPSHOT/error-0.1.0-20210817.110420-3.module.sha256
3aa36428544d98816148ff057bbfc21377ba45915cf20556a8ebf75dcf49c0a0